--- a/BMI-Calculator/Base.lproj/Main.storyboard
+++ b/BMI-Calculator/Base.lproj/Main.storyboard
@@ -47,13 +47,16 @@
                                             <constraint firstAttribute="height" constant="21" id="FFz-i3-Wvt"/>
                                         </constraints>
                                     </stackView>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="WBe-Ia-Meu" userLabel="Height Slider">
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="1.5" minValue="0.0" maxValue="3" translatesAutoresizingMaskIntoConstraints="NO" id="WBe-Ia-Meu" userLabel="Height Slider">
                                         <rect key="frame" x="-2" y="596" width="378" height="61"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="3Ms-IX-RG8"/>
                                         </constraints>
                                         <color key="minimumTrackTintColor" red="0.4549019608" green="0.44705882349999998" blue="0.82352941180000006" alpha="0.51797945209999996" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                         <color key="thumbTintColor" red="0.4549019608" green="0.44705882349999998" blue="0.82352941180000006" alpha="0.51797945209999996" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="onDragSliderHeight:" destination="BYZ-38-t0r" eventType="valueChanged" id="ZJ1-Qt-bTW"/>
+                                        </connections>
                                     </slider>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="Vuu-Gj-xAg">
                                         <rect key="frame" x="0.0" y="666" width="374" height="21"/>
@@ -75,13 +78,16 @@
                                             <constraint firstAttribute="height" constant="21" id="vzl-3G-2av"/>
                                         </constraints>
                                     </stackView>
-                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="h7m-aO-huU" userLabel="Weight Slider">
+                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="72" minValue="0.0" maxValue="200" translatesAutoresizingMaskIntoConstraints="NO" id="h7m-aO-huU" userLabel="Weight Slider">
                                         <rect key="frame" x="-2" y="697" width="378" height="61"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="GuY-dx-RIC"/>
                                         </constraints>
                                         <color key="minimumTrackTintColor" red="0.4549019608" green="0.44705882349999998" blue="0.82352941180000006" alpha="0.51797945209999996" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                         <color key="thumbTintColor" red="0.4549019608" green="0.44705882349999998" blue="0.82352941180000006" alpha="0.51797945209999996" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <action selector="onDragSliderWeight:" destination="BYZ-38-t0r" eventType="valueChanged" id="SSa-QK-BUS"/>
+                                        </connections>
                                     </slider>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W0U-vN-RN2">
                                         <rect key="frame" x="0.0" y="767" width="374" height="51"/>
@@ -110,13 +116,84 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="heightLabel" destination="x0p-It-SG1" id="LR6-qr-ied"/>
+                        <outlet property="weightLabel" destination="sDo-Mf-ZXs" id="8ev-BI-ns1"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="M80-on-Gjx">
+            <objects>
+                <viewController id="Qvb-vA-OF7" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Phv-kC-ChH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="result_background" translatesAutoresizingMaskIntoConstraints="NO" id="mCe-o2-1V6">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" red="0.14117647058823529" green="0.16470588235294117" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="Gy7-wN-WEc">
+                                <rect key="frame" x="88.5" y="340.5" width="237" height="215.5"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUR RESULT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tk1-tx-j8K">
+                                        <rect key="frame" x="2" y="0.0" width="233" height="42"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="19.5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQC-5f-pa4">
+                                        <rect key="frame" x="38.5" y="69" width="160" height="95.5"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="80"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EAT SOME MORE SNACKS!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SAn-SI-lG9">
+                                        <rect key="frame" x="0.0" y="191.5" width="237" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OtE-Bb-k4E">
+                                <rect key="frame" x="24" y="811" width="366" height="51"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="6a8-86-rO7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="RECALCULATE">
+                                    <color key="titleColor" red="0.38431372549999998" green="0.37647058820000001" blue="0.61568627450000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Gy7-wN-WEc" firstAttribute="centerY" secondItem="Phv-kC-ChH" secondAttribute="centerY" id="4Is-P7-eSw"/>
+                            <constraint firstItem="OtE-Bb-k4E" firstAttribute="leading" secondItem="4f8-ZF-s9Y" secondAttribute="leading" constant="24" id="95u-r4-7Fk"/>
+                            <constraint firstItem="Gy7-wN-WEc" firstAttribute="centerX" secondItem="Phv-kC-ChH" secondAttribute="centerX" id="IlX-mp-L1s"/>
+                            <constraint firstItem="mCe-o2-1V6" firstAttribute="leading" secondItem="Phv-kC-ChH" secondAttribute="leading" id="Vhu-f2-Kpf"/>
+                            <constraint firstItem="mCe-o2-1V6" firstAttribute="trailing" secondItem="Phv-kC-ChH" secondAttribute="trailing" id="aR9-gj-1mG"/>
+                            <constraint firstItem="mCe-o2-1V6" firstAttribute="top" secondItem="Phv-kC-ChH" secondAttribute="top" id="dEz-Fo-AcU"/>
+                            <constraint firstItem="4f8-ZF-s9Y" firstAttribute="trailing" secondItem="OtE-Bb-k4E" secondAttribute="trailing" constant="24" id="jty-fG-Ezk"/>
+                            <constraint firstAttribute="bottom" secondItem="mCe-o2-1V6" secondAttribute="bottom" id="wfy-kk-pok"/>
+                            <constraint firstItem="4f8-ZF-s9Y" firstAttribute="bottom" secondItem="OtE-Bb-k4E" secondAttribute="bottom" id="yOQ-VZ-crS"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="4f8-ZF-s9Y"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="15L-Hg-31R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="924.63768115942037" y="126.5625"/>
+        </scene>
     </scenes>
     <resources>
         <image name="calculate_background" width="375" height="812"/>
+        <image name="result_background" width="375" height="812"/>
     </resources>
 </document>
