--- a/BMI-Calculator/View/Base.lproj/Main.storyboard
+++ b/BMI-Calculator/View/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Calculate View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="BMI_Calculator" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CalculateViewController" customModule="BMI_Calculator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -99,6 +99,9 @@
                                         <state key="normal" title="CALCULATE">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="calculateBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x9P-Cm-6ch"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -118,27 +121,30 @@
                     </view>
                     <connections>
                         <outlet property="heightLabel" destination="x0p-It-SG1" id="LR6-qr-ied"/>
+                        <outlet property="heightSlider" destination="WBe-Ia-Meu" id="w7G-eC-D77"/>
                         <outlet property="weightLabel" destination="sDo-Mf-ZXs" id="8ev-BI-ns1"/>
+                        <outlet property="weightSlider" destination="h7m-aO-huU" id="awt-vM-f4g"/>
+                        <segue destination="Qvb-vA-OF7" kind="presentation" identifier="gotoResult" id="Rkg-MT-pag"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
-        <!--View Controller-->
+        <!--Result View Controller-->
         <scene sceneID="M80-on-Gjx">
             <objects>
-                <viewController id="Qvb-vA-OF7" sceneMemberID="viewController">
+                <viewController id="Qvb-vA-OF7" customClass="ResultViewController" customModule="BMI_Calculator" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Phv-kC-ChH">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="result_background" translatesAutoresizingMaskIntoConstraints="NO" id="mCe-o2-1V6">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                                 <color key="backgroundColor" red="0.14117647058823529" green="0.16470588235294117" blue="0.22352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="27" translatesAutoresizingMaskIntoConstraints="NO" id="Gy7-wN-WEc">
-                                <rect key="frame" x="88.5" y="340.5" width="237" height="215.5"/>
+                                <rect key="frame" x="88.5" y="313.5" width="237" height="215.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUR RESULT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tk1-tx-j8K">
                                         <rect key="frame" x="2" y="0.0" width="233" height="42"/>
@@ -161,7 +167,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OtE-Bb-k4E">
-                                <rect key="frame" x="24" y="811" width="366" height="51"/>
+                                <rect key="frame" x="24" y="757" width="366" height="51"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="51" id="6a8-86-rO7"/>
@@ -170,6 +176,9 @@
                                 <state key="normal" title="RECALCULATE">
                                     <color key="titleColor" red="0.38431372549999998" green="0.37647058820000001" blue="0.61568627450000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="recalculatedPressed:" destination="Qvb-vA-OF7" eventType="touchUpInside" id="NJx-8b-UY1"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -186,6 +195,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4f8-ZF-s9Y"/>
                     </view>
+                    <connections>
+                        <outlet property="adviseLabel" destination="SAn-SI-lG9" id="Kzu-ZS-g60"/>
+                        <outlet property="bmiLabel" destination="BQC-5f-pa4" id="KMR-aL-ylE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="15L-Hg-31R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
